<resources>
    <string name="app_name">specilizedcareapp</string>
    <string name="meet_the_provider">Meet The Provider</string>
    <string name="schedule">Schedule</string>
    <string name="talkphr">Sesame</string>
    <string name="telepsych">TelePsych</string>
    <string name="testing">Testing</string>
    <string name="todo">TODO</string>
    <string name="telehealth_with_doxy_me">TeleHealth with Doxy.me</string>
    <string name="education_training_yale_university_graduate_school_of_nursing_completed_two_specialties_adult_internal_medicine_nurse_practitioner_psychiatric_mental_health_nurse_practitioner"><![CDATA[Education & Training Yale University Graduate School of Nursing Completed Two Specialties: Adult Internal Medicine Nurse Practitioner Psychiatric-Mental Health-Nurse Practitioner]]></string>
    <string name="self_portrait">Self Portrait</string>
    <string name="experience_private_out_patient_practice_in_sunapee_nh_providing_primary_care_and_psychiatric_medication_management_provided_psychiatric_liaison_services_for_new_london_hospital_in_new_london_nh_from_october_2011_to_may_2017_full_time_instructor_for_florida_southern_college_s_nurse_practitioner_program_while_providing_medical_and_psychiatric_services_to_patients_at_the_family_health_center_in_lakeland_florida">Experience: Private out-patient practice in Sunapee, NH providing primary care and psychiatric medication management Provided psychiatric liaison services for New London Hospital in New London, NH From October 2011 to May 2017 - Full time instructor for Florida Southern College’s nurse practitioner program while providing medical and psychiatric services to patients at the Family Health Center in Lakeland, Florida.</string>
    <string name="My_style">My style of care is functional and pragmatic. My goal for my patients is to assist each patient to achieve his/her Optimal state of Human-Functionality (OsHF)  I define the concept OsFH as an attempt to aid a patient to understand both the bio-physiological processes and environmental influences so they learn and incorporate the information in order to develop a cohesive integration of their physical skills, cognitive abilities, and emotional/mental traits.    I approach the process using a Functional Medicine paradigm within a psychiatric setting.  Testing for biological/physiological problems is as much of my practice as psychological test batteries are in a psychologists office.    One can not evaluate the mind if the brain is ill.  My experience in neuropsychology, general medicine and psychiatric care brings a unique take on the evaluation and management of psychiatric symptoms, psychosomatic symptoms and atypical symptoms.   If my style interests you, please email the office for your first visit.</string>
    <string name="interests"><![CDATA[My interests include:   The impact of chronic inflammation on brain physiology & cognitive function; associated diagnoses: atopic disease, systemic lupus, allergic asthma, allergic sinusitis, gastritis, food allergies, & others.   Sleep apnea\'s effects on brain physiology in patients 13 through geriatrics - What co-existing conditions contribute to the problem? Why it is important for those dealing with fragmented/disrupted sleep to be screened for a primary sleeping disorder?  Autoimmune Disease effect on brain physiology, cognitive function, and mood regulation.   Understanding the impact endocrine diseases have on brain health and cognitive performance   Diet\'s impact on brain physiology — nutritional deficits and excesses -  including common nutrients  (B12, Vitamin D3, Iron, & ferritin) and less common ones (B3, B6, magnesium, and others).  The short and long term effects of acute inflammation on mood regulation, anxiety symptoms, cognition function, and brain physiology       I address all psychiatric diseases listed in the DSM-V with special interest in the following:  ADHD/ADD in adolescences and adults   with a focus on providing special services to "Adult Professionals"  I offer adult professionals  Tele-Health care on   weeknights (5 PM to 8 PM) , Saturdays (9 AM to 2 PM) and Sundays 10 AM to 2 PM) ---   These visits are for Adult Professionals with stable ADHD  The off hour  visits are an OUT OF POCKET service  ONLY    sleep disorders including Narcolepsy, Sleep Apnea, & Periodic Leg Movement  disorder  Depression  Psychotic disorders  Panic disorder, Obsessive Compulsive Disorder, Dermatillomania and Trichotillomania  Evaluation of dementia related diseases  Hormone Therapy for men and women including Testosterone Replacement therapy - thyroid replacement (T4 (brand-name Synthroid) and T3 - T3\'s brand name is Cytomel as well as Armur Thyroid when deemed clinically necessary)]]></string>
    <string name="start_a_telemedicine_call_with_david">Start a telemedicine call with David  </string>
    <string name="spc_testing">SPC Testing</string>
    <string name="first_fill_our_intake_fourm">Intake Fourm </string>
    <string name="second_send_us_an_email_at_specializedpsychiatriccarellc_gmail_com">    specializedpsychiatriccarellc@gmail.com    </string>
    <string name="complete_prior_to_appointment">Complete prior to appointment</string>
    <string name="email_us_for_appointments">Email us for appointments</string>
    <string name="office_hours_m_f_9_00am_4_15pm"><![CDATA[Office Hours: M -> F 9:00AM-4:15PM]]></string>
    <string name="paypal">PayPal</string>
    <string name="payment_is_neccisary_prior_to_your_appointment">Pay prior to your appointment</string>
</resources>